--- a/app/views/roomtypes/_form1.html.erb
+++ b/app/views/roomtypes/_form1.html.erb
@@ -18,12 +18,12 @@
 		  <div class="form form-horizontal">
 		    <div class="field form-group">
 		      <label class="control-label col-sm-2">Room Type* :</label>
-		      <div class="col-sm-4"><%= f.text_field :typename,:class=>"form-control" %></div>
+		      <div class="col-sm-4"><%= f.text_field :typename,:class=>"form-control" ,disabled: true %></div>
 		    </div>
 
 		    <div class="field form-group">
 		      <label class="control-label col-sm-2">Number of rooms* :</label>
-		      <div class="col-sm-4"><%= f.text_field :rooms,:class=>"form-control" %></div>
+		      <div class="col-sm-4"><%= f.text_field :rooms,:class=>"form-control" ,disabled: true %></div>
 		    </div>
 
 		    <div class="field form-group">
@@ -758,9 +758,31 @@
 		</div>
 	<% end %>
 <%else%>
-	You are not authorised to edit this category!!!
+	
+	<div class="container">
+
+        <div class="modalfade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+      
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Sorry! Something went wrong.</h4>
+              </div>
+              <div class="modal-body">
+                <p>You are not authorized to edit this room category.</p>
+              </div>
+
+            </div>
+           
+          </div>
+        </div>
+       
+      </div>
 <% end %>
 <style>
+
+	.close {display: none;}
 
     .AccordianBtn{
       height:50px;
