--- a/app/views/hotels/_form1.html.erb
+++ b/app/views/hotels/_form1.html.erb
@@ -139,20 +139,20 @@
       <div class="col-sm-offset-2"><h2>Address</h2></div>
         <div class="field form-group">
           <div class="control-label col-sm-2"><strong>Building Name*:</strong></div>
-          <div class="col-sm-4"><%= f.text_field :buildingname,:class=>"form-control", :disabled=>true, :disabled=>true, :disabled=>true, :disabled=>true %></div>
+          <div class="col-sm-4"><%= f.text_field :buildingname,:class=>"form-control",  :disabled=>true %></div>
         </div>
         <div class="field form-group">
           <div class="control-label col-sm-2"><strong>Street Name:</strong></div>
-          <div class="col-sm-4"><%= f.text_field :streetname,:class=>"form-control", :disabled=>true, :disabled=>true, :disabled=>true %></div>
+          <div class="col-sm-4"><%= f.text_field :streetname,:class=>"form-control", :disabled=>true %></div>
         </div>
         <div class="field form-group">
           <div class="control-label col-sm-2"><strong>Landmark<sup>*</sup>:</strong></div>
-          <div class="col-sm-4"><%= f.text_field :landmark,:class=>"form-control" %></div>
+          <div class="col-sm-4"><%= f.text_field :landmark,:class=>"form-control",:disabled=>true %></div>
         </div>
         <div class="field form-group">
           <div class="control-label col-sm-2"><%= f.label :city %><sup>*</sup><strong>:</strong>
           </div>
-          <div class="col-sm-4"><%= f.text_field :city,:class=>"form-control", :disabled=>true, :disabled=>true %></div>
+          <div class="col-sm-4"><%= f.text_field :city,:class=>"form-control", :disabled=>true %></div>
         </div>
         <div class="field form-group">
           <div class="control-label col-sm-2"><%= f.label :state %><sup>*</sup><strong>:</strong>
@@ -179,7 +179,7 @@
             <%= f.label 'Phone Number' %><strong><sup>*</sup>:</strong>
           </div>
           <div class="col-sm-4">
-            <%= f.text_field :phnno1,:class=>"form-control" %>
+            <%= f.text_field :phnno1,:class=>"form-control" ,:disabled=>true%>
           </div>
         </div>
         <div class="field form-group">
@@ -187,7 +187,7 @@
             <%= f.label 'Alternate Number' %><strong><sup>*</sup>:</strong>
           </div>
           <div class="col-sm-4">
-            <%= f.text_field :phnno2,:class=>"form-control" %>
+            <%= f.text_field :phnno2,:class=>"form-control" ,:disabled=>true%>
           </div>
         </div>
         <div class="field form-group">
@@ -195,7 +195,7 @@
             <%= f.label 'Landline' %><strong><sup>*</sup>:</strong>
           </div>
           <div class="col-sm-4">
-            <%= f.text_field :landline,:class=>"form-control" %>
+            <%= f.text_field :landline,:class=>"form-control" ,:disabled=>true%>
           </div>
         </div>
         <div class="field form-group">
@@ -203,7 +203,7 @@
             <%= f.label 'Email' %><strong><sup>*</sup>:</strong>
           </div>
           <div class="col-sm-4">
-            <%= f.email_field :email,:class=>"form-control" %>
+            <%= f.email_field :email,:class=>"form-control" ,:disabled=>true %>
           </div>
         </div>
       </div>
@@ -1061,7 +1061,109 @@
       </div>
       
       <br>
+      <div class="form form-horizontal">
+        <div class="col-sm-offset-2">
+          <h2>Bank Details</h2>
+        </div> 
+        <div class="field form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label 'Account holder Name' %><strong><sup>*</sup>:</strong>
+          </div>
+          <div class="col-sm-4">
+            <%= f.text_field :accholder,:class=>"form-control" ,:disabled=>true %>
+          </div>
+        </div>
+        <div class="field form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label 'Account Number' %><strong><sup>*</sup>:</strong>
+          </div>
+          <div class="col-sm-4">
+            <%= f.text_field :accno,:class=>"form-control" ,:disabled=>true %>
+          </div>
+        </div>
+        <div class="field form-group">
+          <div class="control-label col-sm-2">
+            <strong>IFSC code<sup>*</sup>:</strong>
+          </div>
+          <div class="col-sm-4">
+            <%= f.text_field :ifsccode,:class=>"form-control" ,:disabled=>true %>
+          </div>
+        </div>
+        <div class="field form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label 'GST Number' %><strong><sup>*</sup>:</strong>
+          </div>
+          <div class="col-sm-4">
+            <%= f.text_field :gstno,:class=>"form-control"  ,:disabled=>true%>
+          </div>
+        </div>
+        <div class="field form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label 'PAN Number' %><strong><sup>*</sup>:</strong>
+          </div>
+          <div class="col-sm-4">
+            <%= f.text_field :panno,:class=>"form-control" ,:disabled=>true %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-horizontal">
+          <div class="col-sm-offset-2">
+            <h2>Tax Details</h2>
+          </div>
+          <% if @hotel.tax == true%>
+            <div class="field form-group">
+              <div class="control-label col-sm-2">
+                <%= f.label 'Accommodation Tax' %><strong><sup>*</sup>:</strong>
+              </div>
+              <div class="col-sm-4">
+                  <h2>YAHA DIV AYEGA</h2>
+              </div>
+            </div>
 
+
+          <%else%>
+            <div class="field form-group">
+              <div class="control-label col-sm-2">
+                <%= f.label 'Accommodation Tax' %><strong><sup>*</sup>:</strong>
+              </div>
+              <div class="col-sm-4">
+                <input value = 'Not Applicable' class = "form-control" disabled true >
+              </div>
+            </div>
+
+            <div class="field form-group">
+              <div class="control-label col-sm-2">
+                <%= f.label 'Food Tax' %><strong><sup>*</sup>:</strong>
+              </div>
+              <div class="col-sm-4">
+                <input value = 'Not Applicable' class = "form-control" disabled true >
+              </div>
+            </div>
+          <%end%>
+          <% if @hotel.tax == true%>
+            <div class="field form-group">
+              <div class="control-label col-sm-2">
+                <%= f.label 'Food Tax' %><strong><sup>*</sup>:</strong>
+              </div>
+              <div class="col-sm-4">
+                
+                <input value = 'Same as accommodation' class = "form-control" disabled true >
+
+              </div>
+            </div>
+          <%else%>
+            <div class="field form-group">
+              <div class="control-label col-sm-2">
+                <%= f.label 'Food Tax' %><strong><sup>*</sup>:</strong>
+              </div>
+              <div class="col-sm-4">
+                
+                <input value = '5%' class = "form-control" disabled true >
+
+              </div>
+            </div>
+          <%end%>
+      </div>
       <div class="col-sm-offset-1">
         <div class="col-sm-offset-1">
           <h2>Images</h2>
@@ -1093,51 +1195,7 @@
           </div>
         </div>
       </div>
-      <div class="form form-horizontal">
-        <div class="col-sm-offset-2">
-          <h2>Bank Details</h2>
-        </div> 
-        <div class="field form-group">
-          <div class="control-label col-sm-2">
-            <%= f.label 'Account holder Name' %><strong><sup>*</sup>:</strong>
-          </div>
-          <div class="col-sm-4">
-            <%= f.text_field :accholder,:class=>"form-control" %>
-          </div>
-        </div>
-        <div class="field form-group">
-          <div class="control-label col-sm-2">
-            <%= f.label 'Account Number' %><strong><sup>*</sup>:</strong>
-          </div>
-          <div class="col-sm-4">
-            <%= f.text_field :accno,:class=>"form-control" %>
-          </div>
-        </div>
-        <div class="field form-group">
-          <div class="control-label col-sm-2">
-            <strong>IFSC code<sup>*</sup>:</strong>
-          </div>
-          <div class="col-sm-4">
-            <%= f.text_field :ifsccode,:class=>"form-control" %>
-          </div>
-        </div>
-        <div class="field form-group">
-          <div class="control-label col-sm-2">
-            <%= f.label 'GST Number' %><strong><sup>*</sup>:</strong>
-          </div>
-          <div class="col-sm-4">
-            <%= f.text_field :gstno,:class=>"form-control" %>
-          </div>
-        </div>
-        <div class="field form-group">
-          <div class="control-label col-sm-2">
-            <%= f.label 'PAN Number' %><strong><sup>*</sup>:</strong>
-          </div>
-          <div class="col-sm-4">
-            <%= f.text_field :panno,:class=>"form-control" %>
-          </div>
-        </div>
-      </div>
+      
       <div class="col-sm-12 text-center">
         <button class="btn btn-success btn-md actions ">Update Hotel</button>
       </div>
@@ -1145,9 +1203,32 @@
     </div>
   <%end%>
 <%else%>
-  You are not Authorised to edit this hotel!!!!
+
+      <div class="container">
+
+        <div class="modalfade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+      
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Sorry! Something went wrong.</h4>
+              </div>
+              <div class="modal-body">
+                <p>You are not authorized to edit this hotel.</p>
+              </div>
+
+            </div>
+           
+          </div>
+        </div>
+       
+      </div>
+
 <%end%>
 <style>
+
+  .close {display: none;}
 
   .modal-backdrop.in{
     opacity: 0.8;
