--- a/app/views/roomtypes/index.html.erb
+++ b/app/views/roomtypes/index.html.erb
@@ -1,48 +1,119 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Roomtypes</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Typename</th>
-      <th>Rooms</th>
-      <th>Beds</th>
-      <th>Adults</th>
-      <th>Children</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-    <%@roomtypes = current_user.hotel.roomtypes.all%>
-  <tbody>
-    <% @roomtypes.each do |roomtype| %>
-      <tr>
-        <td><%= roomtype.typename %></td>
-        <td><%= roomtype.rooms %></td>
-        <td><%= roomtype.beds %></td>
-        <td><%= roomtype.baseadults %></td>
-        <td><%= roomtype.basechildren %></td>
-        
-        <td><%= link_to 'Show', roomtype %></td>
-        <td><%= link_to 'Edit', edit_roomtype_path(roomtype) %></td>
-        <%if current_user&&current_user.hotel.pricing == nil%>
-          <td><%= link_to 'add price scheme', controller: 'pricings',action: 'new',room_id: roomtype.id %></td>
+<div class="col-sm-12">
+  <h1>All Roomtypes</h1>
+</div>
+<%@roomtypes = current_user.hotel.roomtypes%>
+<% @roomtypes.each do |roomtype| %>
+<div class="col-xs-12 col-sm-3 col-md-4 col-lg-3">
+  <div class="Block">
+    <div class="container" style="width:100%;height:auto">
+      <% if roomtype.images.any?%>
 
-        <%else%>
-          <% if current_user.hotel.pricing.price[roomtype.id]%>
-              <td><%= link_to 'edit price scheme', controller: 'pricings',action: 'edit',room_id: roomtype.id%></td>
+        <%=image_tag(roomtype.images.first.url,class: 'Image')%>
+      <%else%>
+        <%=image_tag('/assets/NoImageForRoom.jpg',class: 'Image')%>
+      <%end%>
+    </div>
+
+    <div class="DataArea">
+      <div class="container">
+        <h3 class="" style="text-decoration:underline;color:black"><b><%=roomtype.typename %></b></h3>
+        <p class="TextBlack"><b>Rooms: </b><%= roomtype.rooms %></p>
+        <p class="TextBlack"><b>Bed Type: </b><%= roomtype.beds %></p>
+        <p class="TextBlack"><b>Adults: </b><%= roomtype.baseadults %></p>
+        <p class="TextBlack"><b>Children: </b><%= roomtype.basechildren %></p>
+      </div>
+      <div class="container" style="width:100%;height:auto">
+          <%= link_to 'Show', roomtype, :class=>'btn btn-success EdgesSharp' %>
+          <%= link_to 'Edit', edit_roomtype_path(roomtype), :class=>'btn btn-warning EdgesSharp' %>
+          <%if current_user&&current_user.hotel.pricing == nil%>
+          <%= link_to 'add price scheme', url_for(controller: 'pricings',action: 'new',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
           <%else%>
-              <td><%= link_to 'add price scheme', controller: 'pricings',action: 'new',room_id: roomtype.id %></td>
+            <% if current_user.hotel.pricing.price[roomtype.id]%>
+                <%= link_to 'edit price scheme',url_for(controller: 'pricings',action: 'edit',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
+            <%else%>
+                <%= link_to 'add price scheme', url_for(controller: 'pricings',action: 'new',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
+            <%end%>
           <%end%>
-        <%end%>
-
-
-
-        <td><%= link_to 'Destroy', roomtype, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+      </div>
+    </div>
+  </div>
+</div>
+<% end %>
+<div class="col-xs-12 col-sm-3 col-md-4 col-lg-3">
+  <div class="AddRoomBlock" id='AddRoomBlock' style="background:#739cdd">
+    <div class="container" style="width:100%;height:auto;">
+      <div class="TextAddRoomtype" >
+        New Roomtype
+      </div>
+    </div>
+  </div>
+</div>
 <br>
 
-<%= link_to 'New Roomtype', new_roomtype_path %>
+<div class="" style="display:none">
+  <%= link_to 'New Roomtype', new_roomtype_path,:id=>'NewRoom' %>
+
+</div>
+
+
+<style media="screen">
+  .EdgesSharp{
+    border-radius: 0px;
+    color: white;
+  }
+  .DataArea{
+    position: absolute;
+    bottom:60px;
+    margin-right: 10px;
+  }
+  .TextBlack{
+    color: black;
+    font-family: sans-serif;
+    font-size: 15px;
+  }
+  .TextAddRoomtype{
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 27%;
+    padding-left: 10%;
+  }
+  .AddRoomBlock{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width:100%;
+    height: 200px;
+    background: white;
+    margin-bottom: 50px;
+    border: none;
+  }
+  .AddRoomBlock:hover {
+    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
+    border-radius: 5px;
+  }
+  .Block{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width:100%;
+    min-height: 470px;
+    background: white;
+    margin-bottom: 50px;
+    border: none;
+  }
+  .Block:hover {
+    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
+    border-radius: 5px;
+  }
+  .Image{
+    margin-top: 13px;
+    width: 100%;
+    height:auto;
+    max-height: 250px;
+  }
+</style>
+
+
+<script type="text/javascript">
+  $('#AddRoomBlock').click(function(){
+    document.getElementById('NewRoom').click();
+  });
+</script>
